proj/.metadata/.plugins/org.eclipse.cdt.ui/pcnsight.build.log
22:34:29 **** Incremental Build of configuration Debug for project pcnsight ****
make all 
g++  -Wall -DBOOST_LOG_DYN_LINK -c src/tests/tests.cpp -o obj/tests.o -I/usr/local/cuda/include
In file included from src/tests/../CudaEcbAes16B.hpp:4:0,
                 from src/tests/cuda_aes_test.cpp:2,
                 from src/tests/tests.cpp:19:
src/tests/../CudaAES.hpp:10:2: error: invalid use of template-name ‘cuda_aes::paracrypt::CUDACipherDevice’ without an argument list
  CUDACipherDevice* device;
  ^
src/tests/../CudaAES.hpp:22:17: error: ‘CUDACipherDevice’ is not a type
  void setDevice(CUDACipherDevice* device);
                 ^
src/tests/../CudaAES.hpp:25:2: error: invalid use of template-name ‘cuda_aes::paracrypt::CUDACipherDevice’ without an argument list
  CUDACipherDevice* getDevice();
  ^
In file included from src/tests/tests.cpp:19:0:
src/tests/cuda_aes_test.cpp: In member function ‘void cuda_aes::cuda_ecb_aes_16b::test_method()’:
src/tests/cuda_aes_test.cpp:19:32: error: missing template arguments before ‘*’ token
     paracrypt::CUDACipherDevice* gpu = new paracrypt::CUDACipherDevice(0);
                                ^
src/tests/cuda_aes_test.cpp:19:34: error: ‘gpu’ was not declared in this scope
     paracrypt::CUDACipherDevice* gpu = new paracrypt::CUDACipherDevice(0);
                                  ^
src/tests/cuda_aes_test.cpp:19:44: error: expected type-specifier
     paracrypt::CUDACipherDevice* gpu = new paracrypt::CUDACipherDevice(0);
                                            ^
src/tests/cuda_aes_test.cpp:19:44: error: expected ‘;’
src/tests/cuda_aes_test.cpp:26:12: error: type ‘<type error>’ argument given to ‘delete’, expected pointer
     delete gpu;
            ^
src/tests/cuda_aes_test.cpp:12:25: warning: unused variable ‘expected_output’ [-Wunused-variable]
     const unsigned char expected_output[128] = {
                         ^
make: *** [tests.o] Error 1

22:34:32 Build Finished (took 2s.566ms)

